add signup using google auth

--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
         <input type="password" name="password">
         <input type="submit" value="Log In">
     </form>
-    <p>Don't have an account ? Click <a href="signup_view">here</a>
+    <p>Don't have an account ? Click <a href="accounts/signup">here</a>
         to signup</p>
     
 </body>
